Spotjsonobject based flow

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-models/__pycache__/*.pyc
-__pycache__/*.pyc
+# Ignore Python bytecode caches
+__pycache__/
+*.pyc
+*.pyo
+**/__pycache__/
+
+# Ignore html files
+*.html
+models/cross_section - Copy.py
+models/cross_sectionold.py
